--- a/etape4/.env.production
+++ b/etape4/.env.production
@@ -1,5 +1,5 @@
 # Variables d'environnement pour l'environnement de production
 DB_HOST=db
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PASSWORD=root
 DB_NAME=gestion_produits
