--- a/etape4/docker-compose.yml
+++ b/etape4/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   db:
-    image: mysql:8.3
-    container_name: db3
+    image: postgres:13
+    container_name: db4
     environment:
-      MYSQL_DATABASE: gestion_produits
-      MYSQL_ROOT_PASSWORD: root
+      POSTGRES_DB: gestion_produits
+      POSTGRES_PASSWORD: root
     volumes:
       - ./database/gestion_produits.sql:/docker-entrypoint-initdb.d/gestion_produits.sql
     networks:
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: web3
+    container_name: web4
     ports:
       - "8080:80"
     volumes:
@@ -28,4 +28,4 @@ services:
 
 networks:
   default:
-    name: my_network3
+    name: my_network4
